--- a/style.css
+++ b/style.css
@@ -120,3 +120,12 @@ textarea {
 button[type="submit"] {
   margin-top: 10px;
 }
+
+body {
+  background-image: url('logo-l2dalma.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center top;
+  background-attachment: fixed;
+  background-color: #0a0a23;
+}
