--- a/style.css
+++ b/style.css
@@ -138,11 +138,12 @@ body {
   background-attachment: fixed;
   opacity: 0.08;
 }
+
 .hero::before {
   content: "";
   position: absolute;
   top: 0; left: 0; right: 0; bottom: 0;
-  background-color: rgba(0, 0, 0, 0.6); /* escurece o fundo */
+  background-color: rgba(0, 0, 0, 0.6);
   z-index: 0;
 }
 .hero > * {
