--- a/style.css
+++ b/style.css
@@ -133,20 +133,7 @@ body {
 body {
   background-image: url('logo-l2dalma-bg.png');
   background-repeat: no-repeat;
-  background-position: center;
-  background-size: 30%;
+  background-size: 60%;
+  background-position: center center;
   background-attachment: fixed;
-  opacity: 0.08;
-}
-
-.hero::before {
-  content: "";
-  position: absolute;
-  top: 0; left: 0; right: 0; bottom: 0;
-  background-color: rgba(0, 0, 0, 0.6);
-  z-index: 0;
-}
-.hero > * {
-  position: relative;
-  z-index: 1;
 }
